// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas del componente GifDrid Se debe renderizar el componente GifDrid 1`] = `
<Fragment>
  <h2>
    goku
  </h2>
  <p>
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas del componente GifDrid debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h2>
    goku
  </h2>
  <div
    className="card-grid"
  >
    <GridItem
      id="ABC"
      img={
        Object {
          "id": "ABC",
          "title": "Cualquier cosa",
          "url": "https://localhost/cualquier/cosa.jpg",
        }
      }
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GridItem
      id="123"
      img={
        Object {
          "id": "123",
          "title": "Cualquier cosa",
          "url": "https://localhost/cualquier/cosa.jpg",
        }
      }
      key="123"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
